src/objects/TestObj3__c.object
<CustomObject>
    <fields>
        <fullName>teetetetetetetett__c</fullName>
        <label>teetetetetetetett</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EAB_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>testObj2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>testObj2</label>
        <referenceTo>testObj2__c</referenceTo>
        <relationshipLabel>TestObj3</relationshipLabel>
        <relationshipName>TestObj3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>testpicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>testPromoteGlobalsetValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>withoutRestrictedPicklist__c</fullName>
        <label>withoutRestrictedPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>testglobalpicklistvalue123</valueSetName>
        </valueSet>
    </fields>
    <label>TestObj3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObj3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObj3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>